# Agno_Waha_Whatsapp_Bot

./: .env  README.md  app.py  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
data/: personalizando.md  prompt.xml
routers/: waha_router.py
scripts/: start_worker.sh
services/: waha_service.py
workers/: tasks.py
